--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-test
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Server of gavin aperano</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890"
+     crossorigin="anonymous"></script>
+  <title>Les 10 hamsters les plus beaux</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+    h1 {
+      text-align: center;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+    img {
+      width: 150px;
+      float: left;
+      margin-right: 10px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Les 10 hamsters les plus beaux</h1>
+  <ul>
+    <li>
+      <img src="hamster1.jpg" alt="Hamster 1">
+      <p>Hamster 1</p>
+    </li>
+    <li>
+      <img src="hamster2.jpg" alt="Hamster 2">
+      <p>Hamster 2</p>
+    </li>
+    <li>
+      <img src="hamster3.jpg" alt="Hamster 3">
+      <p>Hamster 3</p>
+    </li>
+    <!-- Ajoutez les autres hamsters ici -->
+  </ul>
+</body>
+</html>
