update image website ok

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             width: 150px;
             float: left;
             margin-right: 10px;
+            border: 2px solid #ccc;
+            padding: 5px;
+            border-radius: 5px;
+            box-shadow: 2px 2px 5px #ccc;
         }
     </style>
 </head>
