update image website ok

--- a/index.html
+++ b/index.html
@@ -51,48 +51,114 @@
 
 <body>
     <h1>Les 10 hamsters les plus beaux</h1>
-    <ul>
-        <li>
+
+    <div class="row">
+        <div class="col">
             <img src="./images/hamster1.jpeg" alt="Hamster 1">
             <p>Hamster syrien: Il est le plus commun des hamsters domestiques et est connu pour sa longue fourrure douce.</p>
-        </li>
-        <li>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
             <img src="./images/hamster2.jpeg" alt="Hamster 2">
             <p>Hamster russe: Il est plus grand que le hamster syrien et a une fourrure plus courte.</p>
-        </li>
-        <li>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
             <img src="/images/hamster3.jpeg" alt="Hamster 3">
             <p>Hamster Campbell: Il est similaire au hamster syrien en termes de taille et de fourrure, mais il a des couleurs plus variées.</p>
-        </li>
-        <li>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
             <img src="/images/hamster4.jpeg" alt="Hamster 4">
             <p>Hamster chinois: Il est plus petit que le syrien et a une fourrure plus courte.</p>
-        </li>
-        <li>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
             <img src="/images/hamster5.jpeg" alt="Hamster 5">
             <p>Hamster doré: Il est un sous-type du hamster syrien et a une fourrure dorée ou blonde.</p>
-        </li>
-        <li>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
             <img src="/images/hamster6.jpeg" alt="Hamster 6">
             <p>Hamster black bear: Il est un sous-type du hamster syrien et a une fourrure noire.</p>
-        </li>
-        <li>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
             <img src="/images/hamster7.jpeg" alt="Hamster 7">
             <p>Hamster sauvage: Il est plus petit que les hamsters domestiques et a une fourrure plus courte.</p>
-        </li>
-        <li>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
             <img src="/images/hamster8.jpeg" alt="Hamster 8">
             <p>Hamster nain: Il est un des plus petit hamster avec une taille de 4 à 5 cm.</p>
-        </li>
-        <li>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col">
             <img src="/images/hamster9.jpeg" alt="Hamster 9">
             <p>Hamster Roborovski: Il est le plus petit des hamsters domestiques et est connu pour sa vitesse et sa rapidité.</p>
-        </li>
-        <li>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
             <img src="/images/hamster10.jpeg" alt="Hamster 10">
             <p>Hamster Winter White: Il est un sous-type du hamster syrien et a une fourrure qui change de couleur en hiver.</p>
-        </li>
-    </ul>
+        </div>
+
+
+
+
+        {#
+        <ul>
+            <li>
+                <img src="./images/hamster1.jpeg" alt="Hamster 1">
+                <p>Hamster syrien: Il est le plus commun des hamsters domestiques et est connu pour sa longue fourrure douce.</p>
+            </li>
+            <li>
+                <img src="./images/hamster2.jpeg" alt="Hamster 2">
+                <p>Hamster russe: Il est plus grand que le hamster syrien et a une fourrure plus courte.</p>
+            </li>
+            <li>
+                <img src="/images/hamster3.jpeg" alt="Hamster 3">
+                <p>Hamster Campbell: Il est similaire au hamster syrien en termes de taille et de fourrure, mais il a des couleurs plus variées.</p>
+            </li>
+            <li>
+                <img src="/images/hamster4.jpeg" alt="Hamster 4">
+                <p>Hamster chinois: Il est plus petit que le syrien et a une fourrure plus courte.</p>
+            </li>
+            <li>
+                <img src="/images/hamster5.jpeg" alt="Hamster 5">
+                <p>Hamster doré: Il est un sous-type du hamster syrien et a une fourrure dorée ou blonde.</p>
+            </li>
+            <li>
+                <img src="/images/hamster6.jpeg" alt="Hamster 6">
+                <p>Hamster black bear: Il est un sous-type du hamster syrien et a une fourrure noire.</p>
+            </li>
+            <li>
+                <img src="/images/hamster7.jpeg" alt="Hamster 7">
+                <p>Hamster sauvage: Il est plus petit que les hamsters domestiques et a une fourrure plus courte.</p>
+            </li>
+            <li>
+                <img src="/images/hamster8.jpeg" alt="Hamster 8">
+                <p>Hamster nain: Il est un des plus petit hamster avec une taille de 4 à 5 cm.</p>
+            </li>
+            <li>
+                <img src="/images/hamster9.jpeg" alt="Hamster 9">
+                <p>Hamster Roborovski: Il est le plus petit des hamsters domestiques et est connu pour sa vitesse et sa rapidité.</p>
+            </li>
+            <li>
+                <img src="/images/hamster10.jpeg" alt="Hamster 10">
+                <p>Hamster Winter White: Il est un sous-type du hamster syrien et a une fourrure qui change de couleur en hiver.</p>
+            </li>
+        </ul> #}
 </body>
 
 </html>
