update image website ok

--- a/index.html
+++ b/index.html
@@ -112,12 +112,7 @@
             <img src="/images/hamster10.jpeg" alt="Hamster 10">
             <p>Hamster Winter White: Il est un sous-type du hamster syrien et a une fourrure qui change de couleur en hiver.</p>
         </div>
-
-
-
-
-
-
+    </div>
 </body>
 
 </html>
