--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Framework css</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="main.css">
     <title></title>
 
 </head>
 
 <body>
-    <h1>Framework CSS</h1>
+    <div class="cube">
+        <div class="face front">Front</div>
+        <div class="face back">Back</div>
+        <div class="face right">Right</div>
+        <div class="face left">Left</div>
+        <div class="face top">Top</div>
+        <div class="face bottom">Bottom</div>
+    </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
