--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
         <div class="face top">Top</div>
         <div class="face bottom">Bottom</div>
     </div>
-    <script src="main.js"></script>
+
+    <div>
+        <button>    
+            <a href="https://www.youtube.com/channel/UC0ZVY3yIBQTrSutsV-4yscQ">Subscribe</a>
+        </button> </div>
+    <script src="main.js">
+    </script>
 </body>
 
 </html>
