--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div>
-        <button>    
+        <button class="button.secondary">    
             <a href="https://www.youtube.com/channel/UC0ZVY3yIBQTrSutsV-4yscQ">Subscribe</a>
         </button> </div>
     <script src="main.js">
