--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div>
         <button class="button.secondary">    
-            <a class="" href="https://www.youtube.com/channel/UC0ZVY3yIBQTrSutsV-4yscQ">Subscribe</a>
+            <a  class="link" href="https://www.youtube.com/channel/UC0ZVY3yIBQTrSutsV-4yscQ">Subscribe</a>
         </button> </div>
     <script src="main.js">
     </script>
