--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Framework css</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
     <title>
     </title>
@@ -15,20 +14,12 @@
 </head>
 
 <body>
-    <div class="cube ">
-        <div class="face front ">Front</div>
-        <div class="face back ">Back</div>
-        <div class="face right ">Right</div>
-        <div class="face left ">Left</div>
-        <div class="face top ">Top</div>
-        <div class="face bottom ">Bottom</div>
-    </div>
-
     <div>
         <button class="button.secondary ">    
             Subscribe
         </button>
         <a class="link " href="https://www.youtube.com/channel/UC0ZVY3yIBQTrSutsV-4yscQ "> Test</a>
+        <p class="p-italic"> lorem ipsum</p>
 
     </div>
     <script src="main.js ">
