--- a/index.html
+++ b/index.html
@@ -14,16 +14,33 @@
 </head>
 
 <body>
-    <div>
-        <button class="button.secondary ">    
-            Subscribe
-        </button>
-        <a class="link " href="https://www.youtube.com/channel/UC0ZVY3yIBQTrSutsV-4yscQ "> Test</a>
-        <p class="p-italic"> lorem ipsum</p>
+    <header>
+        <!-- contenu du header -->
+    </header>
 
-    </div>
-    <script src="main.js ">
-    </script>
+    <main>
+        <section>
+            <button class="button.secondary ">    
+                Subscribe
+            </button>
+            <a class="link " href="https://www.youtube.com/channel/UC0ZVY3yIBQTrSutsV-4yscQ "> Test</a>
+            <p class="p-italic"> lorem ipsum</p>
+
+            <!-- contenu de la première section -->
+        </section>
+
+        <section>
+            <!-- contenu de la deuxième section -->
+        </section>
+
+        <section>
+            <!-- contenu de la troisième section -->
+        </section>
+    </main>
+
+    <footer>
+        <!-- contenu du footer -->
+    </footer>
 </body>
 
 </html>
