--- a/index.html
+++ b/index.html
@@ -20,11 +20,30 @@
 
     <main>
         <section>
-            <button class="button.secondary ">    
+            <div class="row">
+                <div class="col-2">
+                    <button class="button.secondary ">
                 Subscribe
-            </button>
-            <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
-            <p class="p-italic"> lorem ipsum</p>
+                </button>
+                    <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
+                    <p class="p-italic"> lorem ipsum</p>
+                </div>
+                <div class="col-2">
+                    <button class="button.secondary ">
+                Subscribe
+                </button>
+                    <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
+                    <p class="p-italic"> lorem ipsum</p>
+                </div>
+                <div class="col-2">
+                    <button class="button.secondary ">
+                Subscribe
+                </button>
+                    <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
+                    <p class="p-italic"> lorem ipsum</p>
+                </div>
+
+            </div>
 
             <!-- contenu de la première section -->
         </section>
