add style for navbar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
 <body>
     <header>
         <!-- contenu du header -->
+        <!-- une navbar -->
+        <nav class="navbar">
+            <a href="index.html" class="logo">
+                <img src="./assets/img/logo.png" alt="logo">
+            </a>
+            <ul class="menu">
+                <li class="menu-item">
+                    <a href="index.html" class="menu-link">Home</a>
+                </li>
+                <li class="menu-item">
+                    <a href="index.html" class="menu-link">About</a>
+                </li>
+                <li class="menu-item">
+                    <a href="index.html" class="menu-link">Services</a>
+                </li>
+                <li class="menu-item">
+                    <a href="index.html" class="menu-link">Contact</a>
+                </li>
+            </ul>
+            </div>
+        </nav>
+
+
     </header>
 
     <main>
