--- a/index.html
+++ b/index.html
@@ -80,8 +80,20 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <!-- contenu du footer -->
+        <nav>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+            </ul>
+        </nav>
+        <p>Copyright &copy; My Company 2023</p>
+        <address>
+            ggat<br>
+            16 avenue emile baudot
+          </address>
     </footer>
 </body>
 
