--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <title>Framework css</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
-    <title>
-    </title>
-
 </head>
 
 <body>
@@ -18,26 +15,31 @@
         <!-- contenu du header -->
         <!-- une navbar -->
         <nav class="navbar">
-            <a href="index.html" class="logo">
-                <img src="./assets/img/logo.png" alt="logo">
-            </a>
-            <ul class="menu">
-                <li class="menu-item">
-                    <a href="index.html" class="menu-link">Home</a>
-                </li>
-                <li class="menu-item">
-                    <a href="index.html" class="menu-link">About</a>
-                </li>
-                <li class="menu-item">
-                    <a href="index.html" class="menu-link">Services</a>
-                </li>
-                <li class="menu-item">
-                    <a href="index.html" class="menu-link">Contact</a>
-                </li>
-            </ul>
+            <div class="col-2">
+                <a href="index.html" class="logo">
+                    <img src="./assets/img/logo.png" alt="logo">
+                </a>
+            </div>
+            <div class="col-2">
+                <ul class="menu">
+                    <li class="menu-item">
+                        <a href="index.html" class="menu-link">Home</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="index.html" class="menu-link">About</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="index.html" class="menu-link">Services</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="index.html" class="menu-link">Profil</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="index.html" class="menu-link">Contact</a>
+                    </li>
+                </ul>
             </div>
         </nav>
-
 
     </header>
 
@@ -80,20 +82,8 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <footer>
         <!-- contenu du footer -->
-        <nav>
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-            </ul>
-        </nav>
-        <p>Copyright &copy; My Company 2023</p>
-        <address>
-            ggat<br>
-            16 avenue emile baudot
-          </address>
     </footer>
 </body>
 
