--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-2">
                     <button class="button.secondary ">
-                Subscribe
+                Subscrib
                 </button>
                     <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
                     <p class="p-italic"> lorem ipsum</p>
