try prod render

--- a/index.html
+++ b/index.html
@@ -82,8 +82,11 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <!-- contenu du footer -->
+        <div class="container">
+            <p>Copyright &copy; 2023 Mon site web s1</p>
+        </div>
     </footer>
 </body>
 
