build footer code ok

--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
 
     <footer class="footer">
         <!-- contenu du footer -->
-        <div class="container">
-            <p>Copyright &copy; 2023 Mon site web s1</p>
-        </div>
+        Copyright &copy; 2023 Mon site web s1
     </footer>
 </body>
 
