--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
     <main>
         <section>
+            <!-- test col in first section-->
             <div class="row">
                 <div class="col-2">
                     <button class="button.secondary ">
@@ -72,6 +73,7 @@
 
             <!-- contenu de la première section -->
         </section>
+
 
         <section>
             <!-- contenu de la deuxième section -->
