--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <nav class="navbar">
             <div class="col-2">
                 <a href="index.html" class="logo">
-                    <img src="./assets/imgages/logo_test.png" alt="logo">
+                    <!--<img src="./assets/images/logo_test.png" alt="logo">-->
+                    <img src="./assets/images/logotest.png" alt="logo">
+
                 </a>
             </div>
             <div class="col-3">
