--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
     <main>
         <section>
-            <!-- test col in first section-->
+            <!-- test col in first section
+
             <div class="row">
                 <div class="col-2">
                     <button class="button.secondary ">
@@ -72,7 +73,7 @@
                 </div>
 
             </div>
-
+            -->
             <!-- contenu de la première section -->
         </section>
 
