--- a/index.html
+++ b/index.html
@@ -13,17 +13,23 @@
 <body>
     <header>
         <!-- contenu du header -->
-        <!-- une navbar -->
+
         <nav class="navbar">
-            <div class="col-2">
+            <!-- une navbar
+            <div class="col-5">
                 <a href="index.html" class="logo">
-                    <!--<img src="./assets/images/logo_test.png" alt="logo">-->
-                    <img src="./assets/images/logotest.png" alt="logo">
+
 
                 </a>
-            </div>
-            <div class="col-3">
+            </div> -->
+            <div class="col-5">
                 <ul class="menu">
+                    <li class="menu-item">
+                        <a href="index.html">
+                            <img src="./assets/images/logotest.png" alt="logo">
+
+                        </a>
+                    </li>
                     <li class="menu-item">
                         <a href="index.html" class="menu-link">Home</a>
                     </li>
