--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 </a>
             </div> -->
-            <div class="col-5">
+            <div class="col-8">
                 <ul class="menu">
                     <li class="menu-item">
                         <a href="index.html">
@@ -45,6 +45,26 @@
                     <li class="menu-item">
                         <a href="index.html" class="menu-link">Contact</a>
                     </li>
+                    <li class="menu-item">
+                        <a href="index.html" class="menu-link">|</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="index.html" class="menu-link">
+                            <img src="./assets/images/icon_loupe2.png">
+                        </a>
+                    </li>
+                    <li class="menu-item">
+                        <button class="button.succes">
+                         connexion
+                        </button>
+                    </li>
+                    <li class="menu-item">
+                        <button class="button.warning">
+                            Commander
+                        </button>
+                    </li>
+
+
                 </ul>
             </div>
         </nav>
@@ -62,21 +82,21 @@
                 </button>
                     <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
                     <p class="p-italic"> lorem ipsum</p>
-                </div>
-                <div class="col-2">
-                    <button class="button.secondary ">
+            </div>
+            <div class="col-2">
+                <button class="button.secondary ">
                 Subscribe
                 </button>
-                    <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
-                    <p class="p-italic"> lorem ipsum</p>
-                </div>
-                <div class="col-2">
-                    <button class="button.secondary ">
+                <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
+                <p class="p-italic"> lorem ipsum</p>
+            </div>
+            <div class="col-2">
+                <button class="button.secondary ">
                 Subscribe
                 </button>
-                    <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
-                    <p class="p-italic"> lorem ipsum</p>
-                </div>
+                <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
+                <p class="p-italic"> lorem ipsum</p>
+            </div>
 
             </div>
             -->
