add poppins on fonts

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </a>
                     </li>
                     <li class="menu-item">
-                        <button class="button.succes">
+                        <button class="button.success">
                          connexion
                         </button>
                     </li>
