--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="./index.html"> Nous restaurants</a>
                     </li>
                     <li>
-                        <a href="./index.html"> Nous contacter </a>
+                        <a href="./index.html"> Nos produits </a>
                     </li>
                     <li>
                         <a href="#cta"> Blog</a>
@@ -33,6 +33,16 @@
                     <li>
                         <a href="#cta"> Contact</a>
                     </li>
+                    <li>
+                        <a href="#cta"> |</a>
+                    </li>
+                    <li>
+                        <a href="#cta">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </a>
+                    </li>
+                    <button class="button-warning">Se connecter</button>
+                    <button class="button-success">Commander</button>
                 </ul>
             </div>
             <div class="nav-user" id="navUser">
@@ -68,8 +78,8 @@
                     <button class="button.secondary ">
                 Subscribe
                 </button>
-                    <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
-                    <p class="p-italic"> lorem ipsum</p>
+                        <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
+                        <p class="p-italic"> lorem ipsum</p>
             </div>
             <div class="col-2">
                 <button class="button.secondary ">
