--- a/index.html
+++ b/index.html
@@ -66,93 +66,102 @@
 
         </nav>
 
+        <div class="slider">
+            <div class="slides">
+                <div class="slide">
+                    <img src="./assets/images/slider1.png" alt="slider1" />
+                    <img src="./assets/images/slider1.png" alt="slider1" />
+
+                </div>
+
+            </div>
+
+        </div>
 
         <!--
-        <div class="text-box">
+        <div class="text-box ">
             <h1>ride with ELECTRACK</h1>
             <p>it's now<br></p>
-            <a href="" class="hero-btn">Download the application</a>
+            <a href=" " class="hero-btn ">Download the application</a>
 
         </div> -->
     </section>
 
-    <main>
-        <section>
-            <!-- test col in first section
+    <section>
+        <!-- test col in first section
 
-            <div class="row">
-                <div class="col-2">
+            <div class="row ">
+                <div class="col-2 ">
                     <button class="button.secondary ">
                 Subscribe
                 </button>
                         <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
-                        <p class="p-italic"> lorem ipsum</p>
+                        <p class="p-italic "> lorem ipsum</p>
             </div>
-            <div class="col-2">
+            <div class="col-2 ">
                 <button class="button.secondary ">
                 Subscribe
                 </button>
                 <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
-                <p class="p-italic"> lorem ipsum</p>
+                <p class="p-italic "> lorem ipsum</p>
             </div>
-            <div class="col-2">
+            <div class="col-2 ">
                 <button class="button.secondary ">
                 Subscribe
                 </button>
                 <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
-                <p class="p-italic"> lorem ipsum</p>
+                <p class="p-italic "> lorem ipsum</p>
             </div>
 
             </div>
             -->
-            <!-- contenu de la première section -->
-        </section>
+        <!-- contenu de la première section -->
+    </section>
 
 
-        <section>
-            <!-- contenu de la deuxième section -->
-        </section>
+    <section>
+        <!-- contenu de la deuxième section -->
+    </section>
 
-        <section>
-            <!-- contenu de la troisième section -->
-        </section>
-    </main>
+    <section>
+        <!-- contenu de la troisième section -->
+    </section>
 
-    <footer class="footer">
+    <footer class="footer ">
         <!-- contenu du footer -->
         Copyright &copy; 2023 Mon site web s1
     </footer>
 
     <script>
-        var navLink = document.getElementById("navLink");
-        var menu = document.getElementById("humberger");
-        var navUser = document.getElementById("navUser");
-        var user = document.getElementById("user");
+        var navLink = document.getElementById("navLink ");
+        var menu = document.getElementById("humberger ");
+        var navUser = document.getElementById("navUser ");
+        var user = document.getElementById("user ");
 
         function showMenu() {
-            navLink.style.right = "0";
+            navLink.style.right = "0 ";
             //rendre le humburger menu invisible
-            menu.style.display = "none";
+            menu.style.display = "none ";
         }
 
         function hideMenu() {
-            navLink.style.right = "-200px";
+            navLink.style.right = "-200px ";
             //rendre le humburger menu visible
-            menu.style.display = "block";
+            menu.style.display = "block ";
         }
 
         function ShowCon() {
-            navUser.style.top = "0";
+            navUser.style.top = "0 ";
             //rendre le user menu invisible
-            user.style.display = "none";
+            user.style.display = "none ";
 
 
         }
 
         function hideCon() {
-            navUser.style.top = "-300px";
+            navUser.style.top = "-300px ";
             //rendre le user menu visible
-            user.style.display = "block";
+            user.style.display = "block ";
 
         }
     </script>
