fixed error menu response and section 1 responsive

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Framework css</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
@@ -133,25 +134,25 @@
     </footer>
 
     <script>
-        var navLink = document.getElementById("navLink ");
-        var menu = document.getElementById("humberger ");
-        var navUser = document.getElementById("navUser ");
-        var user = document.getElementById("user ");
+        var navLink = document.getElementById("navLink");
+        var menu = document.getElementById("humberger");
+        var navUser = document.getElementById("navUser");
+        var user = document.getElementById("user");
 
         function showMenu() {
-            navLink.style.right = "0 ";
+            navLink.style.right = "0";
             //rendre le humburger menu invisible
-            menu.style.display = "none ";
+            menu.style.display = "none";
         }
 
         function hideMenu() {
-            navLink.style.right = "-200px ";
+            navLink.style.right = "-200px";
             //rendre le humburger menu visible
             menu.style.display = "block ";
         }
 
         function ShowCon() {
-            navUser.style.top = "0 ";
+            navUser.style.top = "0";
             //rendre le user menu invisible
             user.style.display = "none ";
 
