update section header

--- a/index.html
+++ b/index.html
@@ -80,13 +80,11 @@
         </div>
 
 
-        <!--
-        <div class="text-box ">
-            <h1>ride with ELECTRACK</h1>
-            <p>it's now<br></p>
-            <a href=" " class="hero-btn ">Download the application</a>
-
-        </div>-->
+        <div class="text-box">
+            <h1>NBA X MCDONALD'S</h1>
+            <p>La NBA et McDonald's ont collaboré pour créer une gamme de burgers à l'effigie des joueurs de basket les plus populaires. Cette collaboration unique offre aux fans de la NBA l'opportunité de se rapprocher de leurs idoles tout en savourant
+                un délicieux burger.</p>
+        </div>
     </section>
 
     <section>
