fixed nav responsive

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             navLink.style.right = "-200px";
             //rendre le humburger menu visible
             menu.style.display = "block ";
+            location.reload();
         }
 
         function ShowCon() {
@@ -162,11 +163,14 @@
             navUser.style.top = "-300px ";
             //rendre le user menu visible
             user.style.display = "block ";
+            location.reload();
 
         }
     </script>
 
 
 </body>
+
+</html>
 
 </html>
