add animation to header section

--- a/index.html
+++ b/index.html
@@ -82,8 +82,15 @@
 
         <div class="text-box">
             <h1>NBA X MCDONALD'S</h1>
-            <p>La NBA et McDonald's ont collaboré pour créer une gamme de burgers à l'effigie des joueurs de basket les plus populaires. Cette collaboration unique offre aux fans de la NBA l'opportunité de se rapprocher de leurs idoles tout en savourant
-                un délicieux burger.</p>
+            <span>La NBA et McDonald's ont collaboré pour créer une gamme de burgers à l'effigie des joueurs de
+
+            </span>
+            <span>
+                basket les plus populaires. Cette collaboration unique offre aux fans de la NBA l'opportunité de se
+            </span>
+            <span>rapprocher de leurs idoles tout en savourant un délicieux burger.
+            </span>
+
         </div>
     </section>
 
