--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Framework css</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890"
+        crossorigin="anonymous"></script>
+    <!--   <link rel="stylesheet" type="text/css" href="./assets/css/main.css">-->
+    <link rel="stylesheet" type=" text/css" href="./assets/css/main2.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 
 
@@ -119,8 +121,26 @@
     </main>
 
     <footer class="footer">
-        <!-- contenu du footer -->
-        Copyright &copy; 2023 Mon site web s1
+        <div class="footer-contact">
+            <div>Contactez-nous</div>
+            <div class="contact-buttons">
+                <img src="assets/images/footer/FabeookLogo.png" height="35" width="35" />
+                <img src="assets/images/footer/TwitterLogo.png" height="35" width="35" />
+                <img src="assets/images/footer/InstagramLogo.png" height="35" width="35" />
+                <img src="assets/images/footer/LinkedinLogo.png" height="35" width="35" />
+            </div>
+
+        </div>
+        <div class="black-line"></div>
+        <div class="footer-app">
+            <img src="assets/images/footer/McdoLogo.png" height="35" width="35" />
+            <div class="footer-text">
+                <p>Téléchargez maintenant l’application McDonald’s</p>
+                <span>Lancer votre préparation à distance avec la nouvelle application McDonald’s</span>
+            </div>
+        </div>
+
+
     </footer>
 
     <script>
