--- a/index.html
+++ b/index.html
@@ -92,6 +92,24 @@
         </div>
     </section>
 
+    <section id="section1" class="section1">
+
+        <div class="row">
+            <div class="section1-col">
+                <h3>Intermediate</h3>
+                <p>Lorem ipsuLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit ametm dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="section1-col">
+                <h3>Degree</h3>
+                <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
+            </div>
+
+
+        </div>
+
+
+    </section>
+
     <section>
         <!-- test col in first section
 
@@ -132,10 +150,7 @@
         <!-- contenu de la troisième section -->
     </section>
 
-    <footer class="footer ">
-        <!-- contenu du footer -->
-        Copyright &copy; 2023 Mon site web s1
-    </footer>
+
 
     <script>
         var navLink = document.getElementById("navLink");
