--- a/index.html
+++ b/index.html
@@ -96,12 +96,15 @@
 
         <div class="row">
             <div class="section1-col">
-                <h3>Intermediate</h3>
-                <p>Lorem ipsuLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit ametm dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</p>
+                <h3>Decouvrez nos inccontournables</h3>
+                <img src="./assets/images/slider1.png"> <button class="button-success"></button>
+
             </div>
             <div class="section1-col">
-                <h3>Degree</h3>
+                <h3>McDonald's Recrute</h3>
                 <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
+                <button class="button-extra1"></button>
+
             </div>
 
 
