add main.css to .gitIgnore

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890"
         crossorigin="anonymous"></script>
-    <!--   <link rel="stylesheet" type="text/css" href="./assets/css/main.css">-->
-    <link rel="stylesheet" type=" text/css" href="./assets/css/main2.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 
 
@@ -155,6 +154,27 @@
     </section>
 
 
+    <section class="footer-section">
+        <footer class="footer">
+            <div class="footer-contact">
+                <div>Contactez-nous</div>
+                <div class="contact-buttons">
+                    <img src="assets/images/footer/FabeookLogo.png" height="35" width="35" />
+                    <img src="assets/images/footer/TwitterLogo.png" height="35" width="35" />
+                    <img src="assets/images/footer/InstagramLogo.png" height="35" width="35" />
+                    <img src="assets/images/footer/LinkedinLogo.png" height="35" width="35" />
+                </div>
+            </div>
+            <div class="black-line"></div>
+            <div class="footer-app">
+                <img src="assets/images/footer/McdoLogo.png" height="35" width="35" />
+                <div class="footer-text">
+                    <p>Téléchargez maintenant l’application McDonald’s</p>
+                    <span>Lancer votre préparation à distance avec la nouvelle application McDonald’s</span>
+                </div>
+            </div>
+        </footer>
+    </section>
 
     <script>
         var navLink = document.getElementById("navLink");
